# RTPlot

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ClassDiagram.cd  Makefile  README.md  RTPlot.sln  RTPlot.vcxproj  RTPlot.vcxproj.filters  UML.drawio  cmake_install.cmake  imgui.ini  test.json
RTPlot Setup/: RTPlot Setup.vdproj
include/: File.h  Graphics.cpp  Graphics.h  IndexBuffer.h  Input.h  Model.h  RTPlotVars.h
include/core/: DeviceManager.h  RTPlotCore.h  RTPlotFunctions.h  RTPlotVars.h
include/files/: FileManager.h  Parser.h
include/menus/: Menu.h
include/plotting/: ColorPalette.h  Logger.h  PlotData.h  Plotter.h  RealTimePlot.h  RollingBuffer.h  ScrollingBuffer.h
include/renderer/: Polygon.hpp  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
include/serial/: DeviceComponent.h  DeviceComponents.h  DeviceManager.h  SerialDevice.h  SerialPlotter.h  SerialPort.h
include/windows/: DemoWindow.h  MainMenuWindow.h  MainWindow.h  SerialPlotterWindow.h  Window.h
res/logos/: RTPlot-Setup.psd  RTPlot.psd
res/shaders/: Basic.shader
src/: Graphics.cpp  IndexBuffer.cpp  Model.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  main.cpp
src/core/: DeviceManager.cpp  RTPlotCore.cpp  RTPlotFunctions.cpp
src/files/: FileManager.cpp  Parser.cpp
src/plotting/: ColorPalette.cpp  Logger.cpp  PlotData.cpp  Plotter.cpp  RealTimePlot.cpp  RollingBuffer.cpp  ScrollingBuffer.cpp
src/renderer/: Model.cpp  Renderer.cpp  VertexBuffer.cpp
src/serial/: DeviceComponent.cpp  DeviceComponents.cpp  DeviceManager.cpp  SerialDevice.cpp  SerialPlotter.cpp  SerialPort.cpp
src/tests/: FileManager_UnitTest.cpp  JSON_UnitTest.cpp  Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h  TestTextures.cpp  TestTextures.h
temp/: PokemonGranite.exe.recipe  RTPlot.exe.recipe  input.new.obj.enc  main.new.obj.enc  main.obj.enc  realtimeplot.obj.enc  serialport.obj.enc  vc143.idb
tests/: FileManager_UnitTest.cpp  JSON_UnitTest.cpp  SerialPort_UnitTest.cpp
